<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbe9e7"
    tools:context=".Activities.SignIn">

    <!--android:foreground="?android:attr/selectableItemBackground"-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_60sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_200sdp"
            android:background="#e64a19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/font_main"
            android:includeFontPadding="false"
            android:text="@string/video_meeting"
            android:textAlignment="center"
            android:textColor="@color/color_icon"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:padding="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:fontFamily="@font/font_main"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_24ssp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:includeFontPadding="false"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="start"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:fontFamily="@font/font_main"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_22ssp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:includeFontPadding="false"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="start"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:text="@string/email"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_12ssp"/>

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:hint="@string/you_example_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorInput"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:text="@string/password"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_11ssp"/>

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022_u2022_u2022"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/colorInput"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/forget_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:fontFamily="@font/font_regular"
            android:textColor="@color/color_text"
            android:textSize="@dimen/_14ssp"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_27sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"/>


        <ImageView
            android:id="@+id/SignIn_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_sign"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:src="@drawable/ic_sign"
            android:padding="@dimen/_12sdp"
            android:elevation="@dimen/_6sdp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forget_Password"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/SingIn_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="@dimen/_40ssp"
            android:fontFamily="@font/font_main"
            android:textColor="@color/color_text"
            android:includeFontPadding="false"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_35sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"/>

        <ProgressBar
            android:id="@+id/progressBarSingIn"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_48sdp"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forget_Password"/>

        <TextView
            android:id="@+id/SingUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/_27ssp"
            android:fontFamily="@font/font_main"
            android:textColor="@color/colorPrimaryDark"
            android:includeFontPadding="false"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SingIn_Text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>