<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbe9e7"
    tools:context=".Activities.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_30sdp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ToolbarSignUp"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:background="#e64a19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_170sdp"
            android:background="#e64a19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ToolbarSignUp">

        </LinearLayout>
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/font_main"
            android:includeFontPadding="false"
            android:text="@string/video_meeting"
            android:textAlignment="center"
            android:textColor="@color/color_icon"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:padding="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:fontFamily="@font/font_main"
                    android:includeFontPadding="false"
                    android:text="@string/create"
                    android:textColor="@color/colorInput"
                    android:textSize="@dimen/_24ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:contentDescription="@string/app_name"
                    android:fontFamily="@font/font_main"
                    android:includeFontPadding="false"
                    android:text="@string/account"
                    android:textColor="@color/colorInput"
                    android:textSize="@dimen/_22ssp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:text="@string/first_name"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/font_regular"
                    android:hint="@string/john"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorInput"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:text="@string/last_name"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputLastName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/font_regular"
                    android:hint="@string/doe"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorInput"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:text="@string/email"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/font_regular"
                    android:hint="@string/you_example_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorInput"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:text="@string/password"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/font_regular"
                    android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022_u2022_u2022"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/colorInput"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:text="@string/confirm_password"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/font_regular"
                    android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022_u2022_u2022"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/colorInput"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <ImageView
            android:id="@+id/SignUp_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:background="@drawable/selector_btn_sign"
            android:contentDescription="@string/app_name"
            android:elevation="@dimen/_6sdp"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/ic_sign"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <TextView
            android:id="@+id/SingUp_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:fontFamily="@font/font_main"
            android:includeFontPadding="false"
            android:text="@string/sign_up"
            android:textColor="@color/color_text"
            android:textSize="@dimen/_40ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <ProgressBar
            android:id="@+id/progressBarSingUp"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_58sdp"
            android:layout_marginEnd="@dimen/_48sdp"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <TextView
            android:id="@+id/SingIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/font_main"
            android:includeFontPadding="false"
            android:paddingBottom="@dimen/_20sdp"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_27ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SingUp_Text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>