<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Forget_Password">

    <LinearLayout
        android:id="@+id/toolLinear"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/BackSignIn"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_gravity="center_vertical|start"
            android:padding="@dimen/_3sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:textSize="@dimen/_15ssp"
            android:textAllCaps="false"
            android:fontFamily="@font/font_regular"
            android:textStyle="bold"
            android:textColor="@color/color_icon"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_gravity="center_vertical|start"
            android:includeFontPadding="false"
            android:contentDescription="@string/app_name"/>
    </LinearLayout>


    <EditText
        android:id="@+id/SearchEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:textColor="@color/color_text"
        android:fontFamily="@font/font_regular"
        android:includeFontPadding="false"
        android:gravity="center_vertical|start"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        android:textColorHint="@color/colorHintText"
        android:hint="@string/email_address"
        app:layout_constraintTop_toBottomOf="@id/toolLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/FindAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_your_account"
        android:textColor="@color/color_icon"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/font_regular"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/SearchEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressFindAccount"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/FindAccount"
        app:layout_constraintEnd_toEndOf="@id/FindAccount"
        app:layout_constraintStart_toStartOf="@id/FindAccount"/>

</androidx.constraintlayout.widget.ConstraintLayout>